--- a/app/public/back/css/style.css
+++ b/app/public/back/css/style.css
@@ -1,22 +1,17 @@
 /* ----- VARIABLES ----- */
-
 /* -- Couleurs -- */
 :root{
-    /* Général */
-    --gen_beige-clair-color: #cec2ab;
     --blanc-color: #fff;
     --noir-color: #000;
     --rouge-color: #ff0000;
-    --beige-fonce-color: #b5a992;
-    --fd-body-gris-color: #f0f0f0;
     --vert-color: #49AB44;
     --bleu-color: #0090ff;
-
-    /* Menu */
-    /* --menu_gris-clair-color: #c3c3c3; */
-
-    /* Page Tarifs */
     --gris-fonce-color: #444;
+    --beige-fonce-color: #b5a992;
+    --gen_beige-clair-color: #cec2ab;
+    --fd-body-gris-color: #f0f0f0;
+    --gris-color: #f2f2f2;
+    --rgba-3-color: rgba(0,0,0,0.3);
 }
 
 
@@ -25,6 +20,7 @@
     --body-font: Arial, times, sans-serif;
     --font-size-1-5: 1.5rem;
 }
+
 
 
 
@@ -60,20 +56,12 @@ header{
     flex-direction: row;
 }
 
-/* header > a{
-    color: var(--blanc-color);
-    margin: 0 15px;
-    font-size: 1rem;
-    text-decoration: none;
-} */
-
 header > a, header button{
     color: var(--blanc-color);
     margin: 0 15px;
     font-size: 0.9rem;
     text-decoration: none;
     text-transform: uppercase;
-
 }
 
 header > a:hover, header button:hover{
@@ -94,7 +82,6 @@ header button{
     border: none;
     outline: none;
     cursor: pointer;
-
 }
 
 header .dropdown-1{
@@ -263,7 +250,7 @@ header .icon_menu{
 }
 
 .heure-prevision{
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid var(--noir-color);
     padding-bottom: 10px;
 }
 
@@ -277,7 +264,7 @@ header .icon_menu{
 }
 
 .jours-prevision{
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid var(--noir-color);
     padding-bottom: 10px;
     font-size: 1.1rem;
 }
@@ -289,18 +276,142 @@ header .icon_menu{
 
 
 
-/* ----- PAGE INFORMATIONS ----- */
-/* .bloc_informationsusers h1{
-    font-size: 1.5rem;
-    text-align: center;
-    text-transform: uppercase;
+/* ----- PAGE ACTUALITES ----- */
+.bloc_articles_actusadmin{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    color: var(--noir-color);;
 }
 
-.bloc_informationsusers form{
+.card_actusadmin{
+    background-color: var(--blanc-color);
+    max-width: 350px;
+    width: 100%;
+    margin: 0 20px 50px;
+    box-shadow: 5px 5px 14px -3px var(--rgba-3-color);
+}
+
+.card_actusadmin img{
+    width: 100%;
+    height: 250px;
+}
+
+.card_actusadmin_texte{
+    margin: 15px;
+}
+
+.card_actusadmin_texte span{
+    font-weight: bold;
+}
+
+.btn_modifier_images{
+    border: none;
+    margin: 20px;
+    padding: 8px;
+    background-color: var(--bleu-color);
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    text-transform: uppercase;
+    color: var(--blanc-color);
+}
+
+.btn_modifier_images:hover{
+    background-color: var(--gen_beige-clair-color);
+}
+
+.btn_modifier_images a{
+    color: var(--blanc-color);
+    text-decoration: none;
+}
+
+.btn_modifier_images a:hover{
+    color: var(--noir-color);
+}
+
+.caracteres_actualites{
+    font-size: 0.8rem;
+}
+
+.style_input_editarticle input{
+    width: 92%;
+}
+
+
+
+
+/* ----- PAGE LIVRE D'OR ----- */
+.textarea_guestbook{
+    width: 300px;
+    height: 100px;
+}
+
+
+
+
+/* ----- PAGE GESTIONS DES ADMINISTRATEURS / UTILISATEURS ----- */
+.bloc_gestions h1{
+    font-size: 1.3rem;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+    background-color: var(--gen_beige-clair-color);
+    padding: 5px 0;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.bloc_gestions h2{
+    font-size: 1.3rem;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 60px;
+    background-color: var(--gen_beige-clair-color);
+    padding: 5px 0;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.bloc_gestions form{
    display: flex;
    justify-content: center;
-} */
+}
 
+.style_gestions{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.case_gestions{
+    background-color: var(--blanc-color);
+    margin: 15px;
+    padding: 15px;
+    width: 300px;
+    box-shadow: 5px 5px 14px -3px var(--rgba-3-color);
+}
+
+.case_gestions span{
+    font-weight: bold;
+}
+
+.btn_gestions{
+    text-align: center;
+}
+
+
+
+
+/* ----- PAGE INFORMATIONS ----- */
 .style_btn_informationsusers{
     text-align: center;
 }
@@ -371,10 +482,25 @@ header .icon_menu{
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     border: none;
-    background-color: white;
+    background-color: var(--blanc-color);
     margin-bottom: 15px;
     outline: none;
     font-size: 0.8rem;
+}
+
+.informationsusers_input select{
+    padding: 10px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border: none;
+    background-color: var(--blanc-color);
+    margin-bottom: 15px;
+    outline: none;
+    font-size: 0.8rem;
+    width: 100%;
 }
 
 .informationsusers_input textarea{
@@ -385,7 +511,7 @@ header .icon_menu{
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     border: none;
-    background-color: white;
+    background-color: var(--blanc-color);
     margin-bottom: 15px;
     outline: none;
     font-size: 1.1rem;
@@ -399,7 +525,7 @@ header .icon_menu{
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     border: none;
-    background-color: white;
+    background-color: var(--blanc-color);
     margin-bottom: 15px;
     font-size: 0.8rem;
 }
@@ -409,227 +535,6 @@ header .icon_menu{
     justify-content: center;
 }
 
-
-
-
-/* ----- PAGE LIVRE D'OR ----- */
-.textarea_guestbook{
-    width: 300px;
-    height: 100px;
-}
-
-
-
-
-/* ----- PAGE ACTUALITES ----- */
-.bloc_articles_actusadmin{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    color: var(--noir-color);;
-}
-
-.card_actusadmin{
-    background-color: var(--blanc-color);
-    max-width: 350px;
-    width: 100%;
-    margin: 0 20px 50px;
-    box-shadow: 5px 5px 14px -3px rgba(0,0,0,0.3);
-}
-
-.card_actusadmin img{
-    width: 100%;
-    height: 250px;
-}
-
-.card_actusadmin_texte{
-    margin: 15px;
-}
-
-.card_actusadmin_texte span{
-    font-weight: bold;
-}
-
-.btn_modifier_images{
-    border: none;
-    margin: 20px;
-    padding: 8px;
-    background-color: var(--bleu-color);
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    text-transform: uppercase;
-    color: var(--blanc-color);
-}
-
-.btn_modifier_images:hover{
-    background-color: var(--gen_beige-clair-color);
-}
-
-.btn_modifier_images a{
-    color: var(--blanc-color);
-    text-decoration: none;
-}
-
-.btn_modifier_images a:hover{
-    color: var(--noir-color);
-}
-
-.caracteres_actualites{
-    font-size: 0.8rem;
-}
-
-.style_input_editarticle input{
-    width: 92%;
-}
-
-
-
-
-
-/* ----- PAGE GESTIONS DES ADMINISTRATEURS / UTILISATEURS ----- */
-.bloc_gestions h1{
-    font-size: 1.3rem;
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 25px;
-    background-color: var(--gen_beige-clair-color);
-    padding: 5px 0;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-}
-
-.bloc_gestions h2{
-    font-size: 1.3rem;
-    text-align: center;
-    text-transform: uppercase;
-    margin-top: 60px;
-    background-color: var(--gen_beige-clair-color);
-    padding: 5px 0;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-}
-
-.bloc_gestions form{
-   display: flex;
-   justify-content: center;
-}
-
-.style_gestions{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.case_gestions{
-    /*border: 1px solid black;
-    */background-color: white;
-    margin: 15px;
-    padding: 15px;
-    width: 300px;
-    box-shadow: 5px 5px 14px -3px rgba(0,0,0,0.3);
-}
-
-.case_gestions span{
-    font-weight: bold;
-}
-
-.btn_gestions{
-    text-align: center;
-}
-
-
-
-/* ----- PAGE CONNEXION -----  */
-.body_connexion{
-    display: flex;
-    justify-content: center;
-    background-color: var(--fd-body-gris-color);
-}
-
-.bloc_connexion{
-    margin: 40px;
-    background-color: white;
-    padding: 40px 60px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    min-width: 300px;
-    text-align: center;
-    box-shadow: 0px 1px 9px 1px rgba(0,0,0,0.3);
-}
-
-.bloc_connexion button{
-    padding: 10px;
-    margin: 15px;
-    border: none;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    color: var(--noir-color);
-    background-color: var(--gen_beige-clair-color);
-    outline: none;
-    cursor: pointer;
-}
-
-.bloc_connexion button:hover{
-    color: var(--blanc-color);
-    background-color: var(--beige-fonce-color);
-}
-
-.bloc_connexion h1{
-    color: var(--beige-fonce-color);
-    text-align: center;
-}
-
-.connexion_input{
-    display: flex;
-    flex-direction: column;
-}
-
-.connexion_input input{
-    padding: 15px;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    border: none;
-    background-color: #f2f2f2;
-    margin-bottom: 15px;
-    outline: none;
-}
-
-.inscription_connexion a{
-    font-size: 0.8rem;
-    text-decoration: none;
-    color: #000;
-}
-
-.inscription_connexion a:hover{
-    color: var(--beige-fonce-color);
-}
-
-
-
-
-
-/* ----- FOOTER -----  */
-.footer_position{
-    display: none;
-}
 
 
 
@@ -690,6 +595,90 @@ header .icon_menu{
 
 
 
+/* ----- FOOTER -----  */
+.footer_position{
+    display: none;
+}
+
+
+
+
+/* ----- PAGE CONNEXION -----  */
+.body_connexion{
+    display: flex;
+    justify-content: center;
+    background-color: var(--fd-body-gris-color);
+}
+
+.bloc_connexion{
+    margin: 40px;
+    background-color: var(--blanc-color);
+    padding: 40px 60px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    min-width: 300px;
+    text-align: center;
+    box-shadow: 0px 1px 9px 1px var(--rgba-3-color);
+}
+
+.bloc_connexion button{
+    padding: 10px;
+    margin: 15px;
+    border: none;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    color: var(--noir-color);
+    background-color: var(--gen_beige-clair-color);
+    outline: none;
+    cursor: pointer;
+}
+
+.bloc_connexion button:hover{
+    color: var(--blanc-color);
+    background-color: var(--beige-fonce-color);
+}
+
+.bloc_connexion h1{
+    color: var(--beige-fonce-color);
+    text-align: center;
+}
+
+.connexion_input{
+    display: flex;
+    flex-direction: column;
+}
+
+.connexion_input input{
+    padding: 15px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border: none;
+    background-color: var(--gris-color);
+    margin-bottom: 15px;
+    outline: none;
+}
+
+.inscription_connexion a{
+    font-size: 0.8rem;
+    text-decoration: none;
+    color: var(--noir-color);
+}
+
+.inscription_connexion a:hover{
+    color: var(--beige-fonce-color);
+}
+
+
+
 
 
 
@@ -726,8 +715,7 @@ header .icon_menu{
         width: 5% !important;
         top: 10px;
         padding: 0 !important;
-
-}
+    }
     
     header{
         flex-direction: column;
@@ -751,10 +739,8 @@ header .icon_menu{
 
     
 
-
-
-
 }
+
 
 
 
@@ -771,11 +757,8 @@ header .icon_menu{
 
 
 
-
-
-
-
 }
+
 
 
 
@@ -784,7 +767,9 @@ header .icon_menu{
     /* ----- PAGE GESTIONS DES ADMINISTRATEURS ----- */
     .case_gestionsadmin{
         width: 100%;
-}
+    }
+
+
 
 
 }
