--- a/app/public/front/css/style.css
+++ b/app/public/front/css/style.css
@@ -77,6 +77,10 @@ body{
     font-family: cinzel; 
 }
 
+.marge_h1{
+    margin-bottom: 50px;
+}
+
 
 
 
@@ -662,10 +666,6 @@ header .btn_menu{
     -o-border-radius: 8px;
 }
 
-.marge_h1_tarif{
-    margin-bottom: 50px;
-}
-
 
 
 
@@ -712,7 +712,7 @@ header .btn_menu{
     overflow: hidden;
 }
 
-.card_actus_btn{
+/* .card_actus_btn{
     bottom: 0;
     background-color: var(--fd-menu-beige);
     height: 50px;
@@ -725,9 +725,27 @@ header .btn_menu{
     color: var(--blanc-color);
     cursor: pointer;
     font-family: cinzel; 
+} */
+
+.card_actus_btn{
+    background-color: var(--fd-menu-beige);
+    height: 50px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    width: 100%;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    color: var(--blanc-color);
+    padding-top: 10px;
+    font-family: cinzel;
 }
 
-.card_actus_btn:hover{
+.card_actus_btn a{
+    text-decoration: none;
+    color: var(--blanc-color);
+}
+
+.card_actus_btn a:hover{
     color: var(--noir-color);
 }
 
