--- a/app/public/front/css/style.css
+++ b/app/public/front/css/style.css
@@ -25,7 +25,9 @@
     --champ-contact-color: rgba(0, 0, 0, 0);
     --champ-contact-hover-color: rgba(0, 0, 0, 0.1);
     --fd-slide-noir-opac: rgba(0,0,0,0.8);
-    --fd-menu-noir-opac:rgba(0,0,0,0.7); 
+    --fd-menu-noir-opac:rgba(0,0,0,0.7);
+    --fd-parallax-noir-opac: rgba(0, 0, 0, 1);
+    --fd-bloc-erreur: rgba(255,59,10,0.5);
 }
 
 
@@ -87,7 +89,7 @@ body{
     text-align: center;
     padding: 10px 0;
     text-transform: uppercase;
-    background-color: RGBA(255,59,10,0.5);
+    background-color: var(--fd-bloc-erreur);
     border-radius: 8px;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
@@ -412,7 +414,7 @@ header .btn_menu{
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
-    box-shadow: 0 5px 20px rgba(0,0,0,0.8);
+    box-shadow: 0 5px 20px var(--fd-slide-noir-opac);
     width: 255px;
     height: 255px;
 }
@@ -541,7 +543,7 @@ header .btn_menu{
     font-weight: 900;
     color: var(--blanc-color);
     padding-top: 11%;
-    text-shadow: 0px 2px 2px rgba(0, 0, 0, 1);
+    text-shadow: 0px 2px 2px var(--fd-parallax-noir-opac);
 
 }
 
